--- a/languages/js/typescript/typescript.org
+++ b/languages/js/typescript/typescript.org
@@ -1,43 +1,45 @@
 - https://typehero.dev/
 - https://devblogs.microsoft.com/typescript/announcing-typescript-5-0/
-- https://github.com/type-challenges/type-challenges
+- challenges https://github.com/type-challenges/type-challenges
 - https://www.youtube.com/watch?v=MbZoQlmQaWQ
 - Tutorial: https://github.com/gibbok/typescript-book
 
 * Language
-** tsconfig.json
-
-$ tsc --init # creates a tsconfig.json
-https://www.typescriptlang.org/docs/handbook/tsconfig-json.html
-https://www.typescriptlang.org/tsconfig
-
-|--------------------------------+---------------------------------------------------------------------------------------+----------------------------------------|
-|                                | description                                                                           | default or some example value          |
-|--------------------------------+---------------------------------------------------------------------------------------+----------------------------------------|
-| files                          |                                                                                       | ["core.ts","sys.ts"]                   |
-| filesGlob                      | DEPRECATED > 2.0, use include                                                         | ["*.ts"]                               |
-| include                        | where to find the source files                                                        | ["src"]                                |
-| extends                        |                                                                                       |                                        |
-| compilerOptions                |                                                                                       |                                        |
-| > paths > @/* > ["src/*"]      |                                                                                       |                                        |
-| > lib                          | which APIs use                                                                        | ["es2015"]                             |
-| > module                       | which module systems use                                                              | "commonjs"                             |
-| > outDir                       | output dir for generated JS                                                           | "dist"                                 |
-| > strict                       | check for invalid code                                                                | true                                   |
-| > target                       | which JS version use                                                                  | "es3,es5,es2015,es2016,ES2020"         |
-| > sourceMap                    | ?                                                                                     | true                                   |
-| > preserveConstEnums           | enable runtime code generation for conts enums, due *inline* of them can cause issues |                                        |
-| > downlevelIteration           | to enable custom iterators pre es2015                                                 |                                        |
-| > noEmit                       |                                                                                       | true?                                  |
-| > types                        |                                                                                       | ["cypres", "@testing-library/cypress"] |
-| > isolatedModules              |                                                                                       | false?                                 |
-|--------------------------------+---------------------------------------------------------------------------------------+----------------------------------------|
-| > noImplicitAny                | to get TS to complain about implicit anys                                             | true if strict                         |
-| > noImplicitThis               |                                                                                       | true if strict                         |
-| > strictBindCallApply          |                                                                                       | true if strict                         |
-| > strictNUllChecks             |                                                                                       | true if strict                         |
-| > strictPropertyInitialization |                                                                                       | true if strict                         |
-|--------------------------------+---------------------------------------------------------------------------------------+----------------------------------------|
+** Primitive Types
+|-----------+------------------------------------------------+----------------------------------------------------------------------|
+| any       |                                                | the default type given by the *compiler* (everything needs a type)   |
+| unknown   | === && ! ? ==                                  | when *YOU* don't know the type ahead of type                         |
+| boolean   | === && ! ? ==                                  | true/false                                                           |
+| number    | + - % <                                        | integers, floats, positives, negatives, Infinity, NaN                |
+| bigint    | + - * / <                                      | ended with "n" like "100n", can be bigger than >2^53                 |
+| string    | + .slice                                       | between simple comma (')                                             |
+| null      |                                                | represent the absent of something, absence of a value                |
+| undefined |                                                | represent the absent of something, something hasn't been defined yet |
+| void      |                                                | return type of a function that retuns nothing                        |
+| never     |                                                | return type of a function that never returns, bottom-type            |
+|-----------+------------------------------------------------+----------------------------------------------------------------------|
+| symbol    | Symbol('a')                                    | unique and NOT equal to other instance                               |
+|           |                                                | const f: unique symbol = Symbol('f') // type of f                    |
+|-----------+------------------------------------------------+----------------------------------------------------------------------|
+| enum      | enum Language { English, Spanish }             | stay away from them....enum to numbers, splittable                   |
+|           | enum Color { Red = '#c10000', Pink = 0xc10050} | to strings                                                           |
+|           | const enum Language { English, Spanish }       | access by dot(.) or bracket [], const enforces (.) only              |
+|-----------+------------------------------------------------+----------------------------------------------------------------------|
+| Function  |                                                | catch-all type for functions, you don't want to use it               |
+|-----------+------------------------------------------------+----------------------------------------------------------------------|
+** Complex Types
+|--------+-------------------------------------------+-------------------------------------------------------------------|
+| object |                                           | not much more narrow than *any*, mutable fields even when *const* |
+|        |                                           | let a: {readonly b: number; c?: string; [key: number]: boolean }  |
+|--------+-------------------------------------------+-------------------------------------------------------------------|
+| Arrays | let c: string[] = ['a']                   | can be heterogeneous, implicitly typed                            |
+|        | let bs: readonly number[] = c.concat(5)   | no-mutable/readonly/Readonly<>/ReadonlyArray<>                    |
+|        | .push                                     | mutable                                                           |
+|--------+-------------------------------------------+-------------------------------------------------------------------|
+| Tuples | let b: [string, string, n] =              | fixed length, known type at each index, explicitly typed          |
+|        | let fares: [number, number?][] =          | optional field supported                                          |
+|        | let list: [number, boolea, ...string[]] = | reset elements support                                            |
+|--------+-------------------------------------------+-------------------------------------------------------------------|
 ** functions
 
 |----+---------------------+---------------------------------------------------------|
