--- a/languages/python/python.org
+++ b/languages/python/python.org
@@ -468,4 +468,5 @@ https://docs.python.org/3/reference/datamodel.html#object.__setitem__
 | unidecode | 23 | 0.4 | ascii transliterations of unicode | https://github.com/avian2/unidecode           |
 | mido      | 23 | 1.1 | MIDI objects for python           | https://github.com/mido/mido/                 |
 | rtmidi    | 23 | 0.2 | rtmidi bindings                   | https://github.com/SpotlightKid/python-rtmidi |
+| moderngl  | 24 | 1.7 | opengl bindings                   | https://github.com/moderngl/moderngl          |
 |-----------+----+-----+-----------------------------------+-----------------------------------------------|
